--- a/HTTP 5101 Cumulative Project/HTTP 5101 Cumulative Project.csproj
+++ b/HTTP 5101 Cumulative Project/HTTP 5101 Cumulative Project.csproj
@@ -199,8 +199,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\ClassController.cs" />
-    <Compile Include="Controllers\ClassDataController.cs" />
+    <Compile Include="Controllers\CourseController.cs" />
+    <Compile Include="Controllers\CourseDataController.cs" />
     <Compile Include="Controllers\hidden\HomeController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\StudentDataController.cs" />
@@ -210,7 +210,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Class.cs" />
+    <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\SchoolDbContext.cs" />
     <Compile Include="Models\Teacher.cs" />
@@ -268,10 +268,16 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Teacher\List.cshtml" />
     <Content Include="Views\Teacher\Show.cshtml" />
-    <Content Include="Views\Class\List.cshtml" />
-    <Content Include="Views\Class\Show.cshtml" />
+    <Content Include="Views\Course\List.cshtml" />
+    <Content Include="Views\Course\Show.cshtml" />
     <Content Include="Views\Student\List.cshtml" />
     <Content Include="Views\Student\Show.cshtml" />
+    <Content Include="Views\Teacher\DeleteConfirm.cshtml" />
+    <Content Include="Views\Teacher\New.cshtml" />
+    <Content Include="Views\Course\DeleteConfirm.cshtml" />
+    <Content Include="Views\Student\DeleteConfirm.cshtml" />
+    <Content Include="Views\Course\New.cshtml" />
+    <Content Include="Views\Student\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
