--- a/HTTP 5101 Cumulative Project/HTTP 5101 Cumulative Project.csproj
+++ b/HTTP 5101 Cumulative Project/HTTP 5101 Cumulative Project.csproj
@@ -278,6 +278,9 @@
     <Content Include="Views\Student\DeleteConfirm.cshtml" />
     <Content Include="Views\Course\New.cshtml" />
     <Content Include="Views\Student\New.cshtml" />
+    <Content Include="Views\Student\Update.cshtml" />
+    <Content Include="Views\Course\Update.cshtml" />
+    <Content Include="Views\Teacher\Update.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
